# libAES67

./: .clang-format  .clang-tidy  .gitignore  .licenseignore  CMakeLists.txt  CONTRIBUTING.md  Info.plist.in  Package.swift  README.md  codestyle.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  compilance.yaml  config.yml
dev/: git.commit.template  libAES67Config.cmake.in  source.license.template
libAES67/: module.modulemap
libAES67.xcodeproj/: project.pbxproj
libAES67.xcodeproj/xcuserdata/neviohirani.xcuserdatad/xcschemes/: xcschememanagement.plist
libAES67/dtrace/: audio_underrun.d  profile_sched.d  trace_ptp.d  trace_rtp.d
libAES67/include/libAES67/: libAES67.h  rtp.h  types.h  udp.h
libAES67/include/libAES67/audio/: types.h
libAES67/include/libAES67/clock/: time.h
libAES67/include/libAES67/network/: types.h  udp.h
libAES67/include/libAES67/rtp/: rtp.h
libAES67/libAES67.docc/: libAES67.md
libAES67/src/: rtp.c  udp.c
libAES67/src/network/: udp.c
libAES67/src/rtp/: rtp.c
libAES67Tests/: CMakeLists.txt  libAES67Tests.m
scripts/: build.sh  check-license-headers.sh  codestyle.sh  environment.sh
